--- a/HTM&CSS-Exam/styles/styles.css
+++ b/HTM&CSS-Exam/styles/styles.css
@@ -23,18 +23,6 @@ header {
   margin: 0 auto;
 }
 
-.container-hero {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  align-content: space-between;
-  width: 95%;
-  max-width: 1280px;
-  margin: 0 auto;
-  gap: 10px;
-}
-
 nav {
   display: flex;
   flex-wrap: wrap;
@@ -77,67 +65,89 @@ header nav ul li a {
 #hero {
   background: url('../images/image_hero.png') no-repeat center center/cover;
   background-color: black;
-  padding: 180px 0 115px;
+  padding: 170px 0 140px;
   position: relative;
 }
 
 #hero .hero-content {
-  max-width: 520px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center
 }
 
-#hero .hero-content h1 {
-  font-family: Raleway, sans-serif;
-  line-height: 43px;
-  font-weight: 300;
-  font-size: 36px;
-  color: white;
-  text-align: left;
-  margin: 25px 0 35px;
-}
-
-#hero .hero-content p {
-  font-family: Raleway, sans-serif;
-  line-height: 23px;
-  font-weight: 300;
-  font-size: 16px;
-  color: white;
-  opacity: 0.8;
-  margin: 40px 0 40px;
-}
-
-#hero .btn {
-  display: inline-block;
-  cursor: pointer;
-  border: 2px solid white;
-  box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.1);
-  padding: 15px 30px;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 15px;
-  color: white;
-  margin: 0;
-}
-
-#hero .btn:hover {
-  background-color: #ff8b38;
-  border: 2px solid #ff8b38;
-}
-
-#hero .btn-form {
-  padding: 15px 0;
-  margin: 0 0 0;
-  background-color: #FF9B51;
-}
-
-#hero .trial-form {
+#hero .hero-left {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  align-content: flex-start;
+  max-width: 520px;
+}
+
+#hero .hero-left h2 {
+  font-family: Raleway, sans-serif;
+  line-height: 43px;
+  text-align: left;
+  font-weight: 300;
+  font-size: 36px;
+  color: white;
+  margin: 30px 0 35px;
+}
+
+#hero .hero-left p {
+  font-family: Raleway, sans-serif;
+  line-height: 23px;
+  text-align: left;
+  font-weight: 300;
+  font-size: 16px;
+  color: white;
+  opacity: 0.8;
+  margin: 35px 0 40px;
+}
+
+#hero a.hero-btn-left {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 2px solid white;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+  color: white;
+  padding: 8px 30px;
+}
+
+#hero .hero-btn-left:hover {
+  background-color: #ff8b38;
+  border: 2px solid white;
+}
+
+#hero .btn-form {
+  cursor: pointer;
+  border: 2px solid #FF9B51;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+  color: white;
+  padding: 13px 0;
+  margin: 0;
+  background-color: #FF9B51;
+}
+
+#hero .btn-form:hover {
+  background-color: #ff8b38;
+  border: 2px solid white;
+}
+
+#hero .trial-form {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
   align-content: space-between;
   align-self: flex-end;
-  max-width: 360px;
 }
 
 #hero span {
@@ -147,24 +157,24 @@ header nav ul li a {
 #hero .try-form {
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
   width: 360px;
   background-color: white;
 }
 
-#hero .try-form h2 {
-  padding: 15px 20px;
-  text-align: center;
-  font-weight: 600;
-  font-size: 20px;
+#hero .try-form h3 {
   background-color: whitesmoke;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  color: #333333;
+  padding: 15px;
 }
 
-#hero .try-form .form-inputs {
+#hero .form-inputs {
   display: flex;
   flex-direction: column;
   gap: 35px;
-  padding: 30px 35px 45px;
+  padding: 30px 35px 50px;
 }
 
 #hero .try-form input {
@@ -181,7 +191,7 @@ header nav ul li a {
 #brand {
   position: relative;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.2);
-  padding: 20px 0;
+  padding: 15px 0 15px;
 }
 
 #brand .brand-content {
@@ -193,7 +203,7 @@ header nav ul li a {
   max-width: 100%;
 }
 
-#brand .brand-content h2 {
+#brand .brand-content h3 {
   font-family: "Open Sans";
   text-align: left;
   font-weight: 700;
@@ -207,10 +217,11 @@ header nav ul li a {
   font-weight: 400;
   font-size: 14px;
   color: #86878b;
+  margin-top: 5px;
 }
 
 #brand .brand-text {
-  width: 35%;
+  width: 30%;
 }
 
 #brand .brand-icons {
@@ -233,12 +244,12 @@ header nav ul li a {
 }
 
 #brand a:hover {
-  color: rgba(255, 255, 255, 0.502);
+  color: #ff8b38;
 }
 
 #brand a:visited {
   text-decoration: none;
-  color: #cccccc;
+  color: #ccc;
 }
 
 #feature-1 {
@@ -259,22 +270,24 @@ header nav ul li a {
   padding: 0;
 }
 
-#feature-1 .feature-1-content h2 {
+#feature-1 .feature-1-content h3 {
   font-family: "Open Sans";
+  text-align: left;
   font-weight: 700;
   font-size: 20px;
-  color: #333333;
-  text-align: left;
+  color: black;
+  /* color: #212121; */
+  /* color: rgb(33, 33, 33); */
   margin-bottom: 60px;
 }
 
 #feature-1 .feature-1-content p {
   font-family: "Open Sans";
+  text-align: left;
   line-height: 20px;
   font-weight: 400;
   font-size: 14px;
   color: #86878b;
-  text-align: left;
   margin-bottom: 30px;
 }
 
@@ -342,17 +355,14 @@ header nav ul li a {
 }
 
 #feature-1 img {
-  max-width: 50%;
+  min-width: 25%;
+  max-width: 100%;
+  ;
 }
 
 #feature-2 {
   padding: 110px 0 130px;
 }
-
-#feature-2 .sub-list-section {
-  max-width: 35%;
-}
-
 
 #feature-2 .feature-2-content {
   display: flex;
@@ -363,27 +373,25 @@ header nav ul li a {
   gap: 30px;
 }
 
-#feature-2 .feature-2-content {
-  font-family: "Open Sans";
-  font-size: 14px;
-  padding: 0;
+#feature-2 .sub-list-section {
+  max-width: 35%;
 }
 
-#feature-2 .feature-2-content h2 {
+#feature-2 .feature-2-content h3 {
   font-family: "Open Sans";
+  text-align: left;
   font-weight: 700;
   font-size: 20px;
-  color: #333333;
-  text-align: left;
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
 }
 
 #feature-2 .feature-2-content h4 {
   font-family: "Open Sans";
-  font-size: 14px;
-  line-height: 17px;
-  font-weight: 600;
-  color: rgba(33, 33, 33);
   text-align: left;
+  font-weight: 600;
+  font-size: 14px;
+  color: #212121;
 }
 
 #feature-2 .feature-2-content p {
@@ -439,12 +447,13 @@ header nav ul li a {
   padding: 0;
 }
 
-#feature-3 .feature-3-content h2 {
+#feature-3 .feature-3-content h3 {
   font-family: "Open Sans";
+  text-align: left;
   font-weight: 700;
   font-size: 20px;
-  color: #333333;
-  text-align: left;
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
 }
 
 #feature-3 .feature-3-content p {
@@ -468,7 +477,7 @@ header nav ul li a {
 
 #process {
   text-align: center;
-  padding: 100px 0 10px;
+  padding: 95px 0 95px;
 }
 
 #process .process-content {
@@ -479,18 +488,20 @@ header nav ul li a {
 #process .process-content h2 {
   font-family: "Raleway";
   line-height: 43px;
+  font-weight: 400;
   font-size: 36px;
-  color: rgba(33, 33, 33);
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
   text-align: center;
 }
 
 #process .process-content h3 {
   font-family: "Open Sans";
-  line-height: 24px;
+  line-height: 17px;
+  text-align: center;
   font-weight: 700;
   font-size: 20px;
   color: #333333;
-  text-align: center;
   margin: 25px 0;
 }
 
@@ -498,7 +509,6 @@ header nav ul li a {
   font-family: "Open Sans";
   font-size: 14px;
   color: #86878b;
-  margin-bottom: 70px;
   text-align: center;
 }
 
@@ -506,6 +516,7 @@ header nav ul li a {
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  margin-top: 70px;
 }
 
 #process .features .feature {
@@ -513,7 +524,7 @@ header nav ul li a {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  max-width: 30%;
+  max-width: 35%;
 }
 
 #process .feature .icon_awesome {
@@ -532,27 +543,139 @@ header nav ul li a {
 #pricing {
   background-color: whitesmoke;
   padding: 110px 0 100px;
-  text-align: center;
-}
-
-#pricing .pricing {
-  font-family: "Open Sans";
-  font-size: 14px;
-  padding: 100px 0 80px;
 }
 
 #pricing .pricing-content h2 {
   font-family: "Raleway";
   line-height: 43px;
-  font-size: 36px;
-  color: rgba(33, 33, 33);
   text-align: center;
+  font-size: 36px;
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
 }
 
 #pricing .pricing-content p {
   font-family: "Open Sans";
+  text-align: center;
+  line-height: 20px;
+  font-weight: 400;
   font-size: 14px;
   color: #86878b;
+}
+
+#pricing .pricing-tables {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: flex-end;
+  gap: 40px;
+  margin-top: 70px;
+}
+
+#pricing .pricing-table {
+  border-bottom: 1px solid whitesmoke;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  align-self: flex-end;
+  width: 35%;
+}
+
+#pricing .pricing-table p {
+  background-color: white;
+  border-bottom: 1px solid whitesmoke;
+  font-family: "Open Sans";
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  font-size: 14px;
+  color: #86878b;
+  padding: 8px 0;
+}
+
+#pricing .table-top {
+  background-color: #333333;
+  position: relative;
+}
+
+#pricing .table-top h3 {
+  border-bottom: 1px solid whitesmoke;
+  font-family: "Open Sans";
+  line-height: 24px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  color: white;
+  padding: 15px 0;
+}
+
+#pricing .table-top p {
+  border-bottom: 1px solid #333333;
+  background-color: #333333;
+  font-family: "Raleway";
+  text-align: center;
+  line-height: 24px;
+  font-weight: 700;
+  font-size: 98px;
+  color: white;
+  padding: 45px 0 15px;
+}
+
+#pricing .table-top span {
+  font-size: 35px;
+}
+
+#pricing a.payment-btn {
+  display: block;
+  background-color: #515151;
+  border-top: 5px solid #333333;
+  border-bottom: 5px solid #ff8b38;
+  font-family: "Open Sans";
+  line-height: 24px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 14px;
+  color: silver;
+  text-decoration: none;
+  padding: 5px;
+}
+
+#pricing a.popular-btn {
+  display: block;
+  background-color: #ff8b38;
+  border-bottom: 5px solid #ff8b38;
+  font-family: "Open Sans";
+  line-height: 24px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  color: white;
+  padding: 5px 5px;
+}
+
+#pricing a.popular-btn:hover {
+  background-color: #ff8b38;
+  color: #333333;
+}
+
+#pricing a.payment-btn:hover {
+  background-color: #ff8b38;
+  color: white;
+  transition-duration: 1.3s;
+}
+
+#pricing .pricing-tables:hover a.payment-btn.active {
+  background-color: #ff8b38;
+  color: white;
+  transition-duration: 1.3s;
+}
+
+#pricing .pricing-tables:hover a.popular-btn {
+  display: none;
 }
 
 #testimonials {
@@ -560,47 +683,39 @@ header nav ul li a {
   text-align: center;
 }
 
-#testimonials .testimonials {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 120px;
-}
-
-#testimonials .testimonial {
-  max-width: 30%;
-}
-
-#testimonials .testimonial {
-  font-family: "Open Sans";
-  font-size: 14px;
-}
-
 #testimonials .testimonials-content h2 {
   font-family: "Raleway";
   line-height: 43px;
-  font-size: 36px;
-  color: rgba(33, 33, 33);
   text-align: center;
+  font-size: 36px;
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
 }
 
-#testimonials .testimonials-content h3 {
+#testimonials .testimonials-content p {
   font-family: "Open Sans";
-  text-align: left;
-  font-weight: 700;
-  font-size: 20px;
-  color: #333333;
-  margin-top: 30px;
-}
-
-#testimonials .testimonials-content span {
-  font-family: "Open Sans";
+  line-height: 20px;
+  text-align: center;
   font-weight: 400;
   font-size: 14px;
   color: #86878b;
 }
 
-#testimonials .testimonials-content .styled-blok {
+#testimonials .testimonials {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 120px;
+  margin-top: 55px;
+}
+
+#testimonials .testimonial {
+  font-family: "Open Sans";
+  font-size: 14px;
+  max-width: 30%;
+}
+
+#testimonials .testimonial .styled-block {
   background-color: whitesmoke;
   font-family: "Open Sans";
   text-align: left;
@@ -608,20 +723,26 @@ header nav ul li a {
   font-size: 14px;
   color: #86878b;
   padding: 20px 15px;
-  margin-top: 55px;
-  margin-bottom: 20px;
 }
 
-#testimonials .testimonials-content p {
-  font-family: "Open Sans";
-  font-size: 14px;
-  color: #86878b;
-  text-align: left;
-}
-
-#testimonials .testimonials-content img {
+#testimonials .testimonial img {
   float: left;
   margin-right: 20px;
+  margin-top: 30px;
+}
+
+#testimonials .testimonial h3 {
+  font-family: "Open Sans";
+  text-align: left;
+  line-height: 20px;
+  font-weight: 700;
+  font-size: 20px;
+  color: #333333;
+  margin-top: 35px;
+}
+
+#testimonials .testimonial p {
+  text-align: left;
 }
 
 #custom {
@@ -683,7 +804,8 @@ header nav ul li a {
   text-align: center;
   line-height: 43px;
   font-size: 36px;
-  color: rgba(33, 33, 33);
+  color: #212121;
+  /* color: rgb(33, 33, 33); */
 }
 
 #contact .contact-content p {
@@ -758,7 +880,7 @@ header nav ul li a {
 hr.devider-whit {
   border-top: 1px solid whitesmoke;
   width: 65px;
-  margin-left: 0;
+  margin: 0;
 }
 
 hr.devider-orange-left {
@@ -771,6 +893,12 @@ hr.devider-orange {
   width: 65px;
   border-top: 2px solid #ffa565;
   margin: 25px auto 25px;
+}
+
+hr.devider-orange-30 {
+  width: 65px;
+  border-top: 2px solid #ffa565;
+  margin: 25px auto 30px;
 }
 
 hr.devider-white {
@@ -790,12 +918,12 @@ footer {
 }
 
 footer .brand-icons {
+  cursor: pointer;
   font-family: 'Font Awesome';
   text-align: center;
   font-weight: 300;
   font-size: 24px;
   color: silver;
-  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -813,52 +941,42 @@ footer a {
 }
 
 footer a:hover {
-  color: rgb(65, 207, 253);
+  color: #ff8b38;
 }
 
 footer a:visited {
   text-decoration: none;
-  color: #cccccc;
+  color: rgba(255, 255, 255, 0.502);
 }
 
 
 @media (max-width: 720px) {
 
-  header {
-    flex-direction: column;
-  }
-
-  #hero .trial-form {
-    position: static;
-    max-width: 100%;
-    margin-top: 20px;
-  }
-
+  #contact .form-content,
+  #hero .hero-content,
+  #hero .hero-left,
+  #hero a.btn,
+  #hero .hero-left,
+  #hero .try-form,
   #brand .brand-content,
-  #brand .brand-icons,
-  #brand .brand-text {
-    width: 100%;
-  }
-
-  #feature-1 .feature-1-content,
-  #feature-2 .feature-2-content {
-    gap: 100px;
-  }
-
-  #brand .brand-content,
-  #feature-1 .feature-1-content,
   #feature-1 .feature-1-content,
   #feature-2 .feature-2-content,
   #feature-3 .feature-3-content {
     flex-wrap: wrap;
   }
 
+  #contact .form-content,
+  #hero .hero-content,
+  #hero .hero-left,
+  #hero a.btn,
+  #hero .trial-form,
   #brand .brand-content,
   #feature-1 .feature-1-content,
   #feature-2 .feature-2-content,
   #feature-3 .feature-3-content,
   #process .features,
   #pricing .pricing-tables,
+  #pricing .pricing-table,
   #testimonials .testimonials {
     flex-direction: column;
     align-items: center;
@@ -869,19 +987,75 @@ footer a:visited {
   #feature-2 .sub-list-section,
   #feature-3 .feature-3-content .standard-picture-text,
   #process .features .feature,
-  #pricing .pricing-table,
   #testimonials .testimonial {
     max-width: 100%;
-  }
-
-  #testimonials .testimonials {
-    gap: 20px;
   }
 
   #feature-1 img,
   #feature-2 img,
   #feature-3 img {
     max-width: 100%;
+  }
+
+  header {
+    flex-direction: column;
+  }
+
+  #hero .hero-left h2,
+  #hero .hero-left p {
+    text-align: center;
+  }
+
+  #hero .trial-form {
+    position: static;
+    max-width: 100%;
+    margin-top: 70px;
+  }
+
+  #pricing .pricing-table,
+  #hero .trial-form,
+  #hero .try-form {
+    align-self: center;
+  }
+
+  #brand .brand-content,
+  #brand .brand-icons,
+  #brand .brand-text {
+    width: 100%;
+  }
+
+  #contact .left,
+  #contact .form textarea,
+  #pricing .pricing-tables,
+  #pricing .pricing-table {
+    min-width: 90%;
+    max-width: 100%;
+  }
+
+
+  #feature-1 .tab-buttons {
+    display: flex;
+  }
+
+  #feature-1 .feature-1-content,
+  #feature-2 .feature-2-content {
+    gap: 100px;
+  }
+
+  #contact .form-content,
+  #hero .hero-content,
+  #testimonials .testimonials {
+    gap: 20px;
+  }
+
+  #contact .left,
+  #contact .form textarea {
+    margin: 0;
+  }
+
+  #contact .form textarea {
+    height: 150px;
+    margin-top: 15px;
   }
 
   #brand .brand-icons {
